[package]
name = "med2md"
version = "0.1.0"
edition = "2024"
default-run = "med2md"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies"] }
scraper = "0.19"
html2md = "0.2"
url = "2.5"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
ego-tree = "0.6"
markup5ever = "0.12"
